# FATIMA-ZEHRA-BOUTIQUE

./: .deployment-env-summary.json  .gitignore  DEPLOYMENT-COMPLETE.md  README.md  VERCEL-DEPLOYMENT-GUIDE.md  VERCEL-DEPLOYMENT-SUMMARY.md  VERCEL-DEPLOYMENT.md  VERCEL-MANUAL-SETUP.md  VERCEL-STATUS-REPORT.md  netlify.toml  pyproject.toml  vercel.json  verify-deployment.sh
api/: backend.py  index.py  pyproject.toml  requirements.txt
deployment-report/: index.html
history/prompts/general/: 3-fix-frontend-and-push-to-github.general.prompt.md  4-full-stack-wiring-whatsapp-seed-data.general.prompt.md
learnflow-app/: DEPLOYMENT-VERIFICATION-REPORT.md  DEPLOYMENT_GUIDE.md  PRODUCTION-ISSUES-FIXED.md  PRODUCTION-SETUP-GUIDE.md  SETUP_COMPLETE.md  netlify.toml
learnflow-app/app/frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
learnflow-app/app/frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
learnflow-app/app/frontend/app/about/: page.tsx
learnflow-app/app/frontend/app/cart/: page.tsx
learnflow-app/app/frontend/app/contact/: page.tsx
learnflow-app/app/frontend/app/orders/: page.tsx
learnflow-app/app/frontend/app/privacy/: page.tsx
learnflow-app/app/frontend/app/products/: page.tsx
learnflow-app/app/frontend/app/profile/: page.tsx
learnflow-app/app/frontend/app/terms/: page.tsx
learnflow-app/app/frontend/components/: ChatWidget.tsx  Footer.tsx  Navbar.tsx  ProductCard.tsx
learnflow-app/netlify/functions/: api.py  requirements.txt
(+11 files in other folders)
