[project]
name = "fatima-zehra-boutique-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.1.0",
    "chatkit>=0.0.1",
    "fastapi[standard]>=0.128.0",
    "graphviz>=0.21",
    "httpx>=0.27.0",
    "mangum>=0.17.0",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
