[project]
name = "fatima-zehra-boutique-api"
version = "0.1.0"
description = "Vercel API for Fatima Zehra Boutique"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.1.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.27.0",
    "mangum>=0.17.0",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.32",
]
